fix homepage ribbon text wrapping

--- a/www/css/khan.css
+++ b/www/css/khan.css
@@ -46,23 +46,9 @@ width: 90%;
 	width: 9%;
 	height: 26px;
 	font-size: 11pt;
-	/*background-color: #4d90fe;
-	background-image: -webkit-gradient(linear,left top,left bottom,from(#4d90fe),to(#4787ed));
-	background-image: -webkit-linear-gradient(top,#4d90fe,#4787ed);
-	background-image: -moz-linear-gradient(top,#4d90fe,#4787ed);
-	background-image: -ms-linear-gradient(top,#4d90fe,#4787ed);
-	background-image: -o-linear-gradient(top,#4d90fe,#4787ed);
-	background-image: linear-gradient(top,#4d90fe,#4787ed);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#4d90fe',EndColorStr='#4787ed');
-	border: 1px solid #3079ed;
-	color: #fff!important;
-	margin: 0 0;
-	border-radius: 2px;
-	-moz-user-select: none;
-	-webkit-user-select: none;*/
 }
-.page-ribbon .icon-search {top: -41px; left: 8px; position: relative; font-size: 140%; opacity: .7;}
-.page-ribbon .span4 {width: 33%; display: inline-block; top: -40px; position: relative;}
+.page-ribbon .icon-search {top: -35px; left: 8px; position: relative; font-size: 140%; opacity: .7;}
+.page-ribbon .span4 {width: 33%; white-space: nowrap; display: inline-block; top: -33px; position: relative;}
 .page-ribbon .span8 {width: 66%; display: inline-block;}
 
 /** topic view */
